1. fix scroll bar flash issue. 2. change button on mobile to square shape. 3. sidebar size adjust.

--- a/webui/src/main/styles/components.css
+++ b/webui/src/main/styles/components.css
@@ -1,6 +1,10 @@
-
-
-
+/**
+ * 	Styles for the buttons on every page
+ */
+.button-area {
+	padding:0px;
+	width:100%;
+}
 .circle-button {
     width:130px;
     height:130px;
@@ -24,11 +28,20 @@
 	background-image: -webkit-radial-gradient(45px 45px, circle cover, green, lightgreen);
 	background-image: radial-gradient(45px 45px 45deg, circle cover, green 0%, lightgreen 100%, blue 95%);
 }
+@media only screen and (max-width: 480px) {
+	.circle-button {
+		width: 50%;
+		height: 50px;
+		line-height: 50px;
+		border-radius : 0px;
+		border:none;
+	}
+}
+
+/**
+ * 	Styles for the summary area on home page.
+ */
 .account-summary {
-	/*
-	margin-left: auto;
-		margin-right: auto;*/
-	
     width: 100%;
 	border:none;
 	padding:10px;
@@ -36,14 +49,7 @@
 	color:green;
 	text-align:left;
 	vertical-align:top;
-	/*
-	outline-style:solid;
-		outline-color:#007069;
-		outline-width:10px;*/
 	
-}
-.button-area {
-	padding:20px;
 }
 .account-summary table {
     width: 100%;
